"Add function to compute image hashes. Remember to add opencv_img_hash330.dll to your release folder when running tests"

--- a/ImageMatcher/ImageMatcher.vcxproj
+++ b/ImageMatcher/ImageMatcher.vcxproj
@@ -149,7 +149,10 @@
   <ItemGroup>
     <ClInclude Include="Detector.h" />
     <ClInclude Include="FeatureExtractor.h" />
+    <ClInclude Include="HashCompare.h" />
+    <ClInclude Include="HashComparitor.h" />
     <ClInclude Include="Matcher.h" />
+    <ClInclude Include="MatchResult.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Subject.h" />
     <ClInclude Include="targetver.h" />
@@ -171,8 +174,10 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="FeatureExtractor.cpp" />
+    <ClCompile Include="HashComparitor.cpp" />
     <ClCompile Include="ImageMatcher.cpp" />
     <ClCompile Include="Matcher.cpp" />
+    <ClCompile Include="MatchResult.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
